# siare

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: CONFIGURATION.md  CONTRIBUTING.md  GLOSSARY.md  Gemfile  PRD.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  WHY_SIARE.md  _config.yml  index.md
docs/architecture/: DATA_MODELS.md  SYSTEM_ARCHITECTURE.md  index.md
docs/guides/: USE_CASES.md  benchmarks.md  custom-extensions.md  first-custom-pipeline.md  index.md  prompt-engineering.md
docs/plans/: 2025-12-20-stub-fixes-design.md
examples/clinical_trials/: README.md  main.py
examples/clinical_trials/sample_data/: trials.json
examples/quickstart/: README.md  main.py
examples/quickstart/docs/: faq.md  user-guide.md
siare/: __init__.py  builders.py  cli.py
siare/adapters/: __init__.py  base.py  vector_search.py  web_search.py  wikipedia_search.py
siare/benchmarks/: __init__.py  adapters.py  base.py  evolution_runner.py  hotpotqa.py  natural_questions.py  publication_suite.py  quality_gate_suite.py  rag_runner.py  reporter.py  reproducibility.py  runner.py  self_improvement_benchmark.py
siare/benchmarks/comparison/: __init__.py  baselines.py
siare/benchmarks/corpus/: __init__.py  index_manager.py  loader.py  wikipedia_loader.py
siare/benchmarks/datasets/: __init__.py  beir.py  frames.py
siare/benchmarks/metrics/: __init__.py  evolution_metrics.py  integration.py  retrieval.py  retrieval_evolution.py
siare/benchmarks/reports/: __init__.py  agentic_comparison_report.py  evolution_value_report.py  self_improvement_report.py
siare/benchmarks/scripts/: __init__.py  demonstrate_evolution_value.py  download_beir_corpus.py  run_agentic_comparison.py  run_baseline.py  run_evolution_benchmark.py  run_publication_benchmark.py  run_rag_benchmark.py  run_self_improvement_benchmark.py  verify_benchmark.py
siare/benchmarks/sops/: __init__.py  evolvable_rag.py  multihop_rag.py  rag_retriever.py  simple_qa.py
siare/benchmarks/tracking/: __init__.py  learning_curve_tracker.py  prompt_diff_tracker.py
siare/benchmarks/visualization/: __init__.py  matplotlib_charts.py  plotly_charts.py
siare/core/: __init__.py  config.py  constants.py  hooks.py  models.py
siare/providers/: __init__.py  ollama_provider.py
siare/services/: __init__.py  agent_session.py  agentic_director.py  circuit_breaker.py  config_store.py  director.py  error_classifier.py  evaluation_service.py  execution_engine.py  gene_pool.py  knowledge_base.py  llm_cache.py  llm_provider.py  qd_grid.py  retry_handler.py  scheduler.py  supervisor.py  variation_tools.py
siare/services/hallucination/: __init__.py  citation_accuracy.py  claims.py  faithfulness.py  groundedness.py  ragas_adapter.py  types.py
siare/services/prompt_evolution/: __init__.py  constraint_validator.py  critic.py  feedback_extractor.py  feedback_injector.py  orchestrator.py  parser.py  section_mutator.py  selector.py
siare/services/prompt_evolution/strategies/: __init__.py  base.py  evoprompt.py  metaprompt.py  textgrad.py
siare/services/selection/: __init__.py  factory.py  strategies.py
siare/utils/: diff.py  file_utils.py  graph_viz.py  multiple_comparison.py  sampling.py  statistics.py  weighted_aggregation.py
tests/mocks/: __init__.py  mock_embeddings.py  mock_llm_provider.py
tests/unit/: test_agent_session.py  test_agentic_director.py  test_agentic_hooks.py  test_agentic_models.py  test_benchmark_agentic_config.py  test_config_store.py  test_crossover_mutations.py  test_director.py  test_error_handling.py  test_evaluation_service.py  test_execution_engine.py  test_helpers.py  test_knowledge_base.py  test_models.py  test_qd_grid.py  test_scheduler.py  test_scheduler_agentic.py  test_statistics.py  test_supervisor.py  test_topology_mutations.py  test_variation_tools.py  test_vector_search.py
