[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "siare"
version = "1.0.0"
description = "Self-Improving Agentic RAG Engine - Evolve multi-agent RAG pipelines using Quality-Diversity optimization"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Daniel Bentes", email = "daniel@synapti.ai"}]
maintainers = [{name = "Daniel Bentes", email = "daniel@synapti.ai"}]
requires-python = ">=3.10"
keywords = [
    "rag",
    "retrieval-augmented-generation",
    "evolutionary-algorithms",
    "quality-diversity",
    "map-elites",
    "llm",
    "agents",
    "multi-agent",
    "prompt-optimization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "python-dateutil>=2.8.0",
    "typing-extensions>=4.0.0",
    # CLI dependencies
    "click>=8.0.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
]
embeddings = [
    "sentence-transformers>=2.2.0",
]
full = [
    "siare[llm,embeddings]",
    "scikit-learn>=1.3.0",
]
benchmarks = [
    "datasets>=2.14.0",
    "beir>=2.0.0",
    "plotly>=5.18.0",
    "matplotlib>=3.7.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]

[project.scripts]
siare = "siare.cli:main"

[project.urls]
Homepage = "https://siare.dev"
Documentation = "https://github.com/synaptiai/siare#readme"
Repository = "https://github.com/synaptiai/siare"
Issues = "https://github.com/synaptiai/siare/issues"
Changelog = "https://github.com/synaptiai/siare/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
siare = ["py.typed"]

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py310"
fix = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit (security)
    "A",   # flake8-builtins
    "C90", # mccabe complexity
    "T20", # flake8-print
    "PT",  # flake8-pytest-style
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "RUF", # ruff-specific rules
]

ignore = [
    "E501",    # line too long (handled by formatter)
    "S101",    # use of assert
    "PLR0913", # too many arguments
    # Pragmatic ignores for v1.0 - can tighten later
    "E402",    # imports not at top (needed for circular import prevention)
    "C901",    # complexity (would need major refactoring)
    "B904",    # raise from (good practice but minor)
    "N806",    # uppercase in functions (constants are fine)
    "SIM102",  # nested if (often clearer this way)
    "B027",    # empty methods in ABC (needed for optional overrides)
    "S324",    # md5 for non-security uses (content hashing)
    "ARG001",  # unused args (sometimes needed for API compatibility)
    "ARG002",  # unused method args (needed for API signatures)
    "RUF022",  # __all__ sorting (not critical)
    "RUF006",  # asyncio task reference (minor)
    "S311",    # random for non-crypto (evolution/sampling)
    "C416",    # dict comprehension style (preference)
    "SIM105",  # contextlib.suppress (try-except clearer)
    "S110",    # try-except-pass (valid in cleanup code)
    "PTH123",  # Path.open() (open() is fine)
    "RUF012",  # ClassVar annotations (not critical)
    "RUF001",  # Unicode in strings (math symbols are valid)
    "RUF003",  # Unicode in comments (math symbols are valid)
    "N815",    # camelCase in models (intentional for JSON)
    "SIM108",  # ternary operators (if-else often clearer)
    "A002",    # builtin shadowing (sometimes unavoidable)
    "B007",    # unused loop variable (minor)
    "UP038",   # isinstance style (minor)
    "C401",    # generator comprehension style (minor)
    "RUF015",  # iterator style (minor)
    "SIM118",  # dict.keys() (explicit is fine)
    "SIM103",  # return condition directly (if-else often clearer)
    "UP007",   # Union type annotation style (compatibility)
    "N818",    # exception naming (RetryExhausted is fine)
    "F841",    # unused variable (sometimes intentional)
    "B023",    # loop variable in lambda (false positive when lambda called immediately)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]
"tests/**/*.py" = ["S101", "PLR2004", "ARG"]
"siare/benchmarks/**/*.py" = ["S", "C", "ARG", "T20"]  # benchmarks are less strict

[tool.ruff.lint.isort]
known-first-party = ["siare"]

# Pyright configuration
[tool.pyright]
include = ["siare"]
exclude = ["siare/benchmarks"]  # Benchmarks module uses many optional deps
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
# Relax for external library types (chromadb, sentence-transformers, etc.)
reportUnknownMemberType = "warning"
reportUnknownVariableType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownParameterType = "warning"
# Keep strict for actual code issues
reportPossiblyUnboundVariable = true
reportMissingImports = true
reportPrivateUsage = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--strict-markers"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]
asyncio_mode = "auto"
